--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <!-- List record submission form, add a link to replace the '#' when putting a link to your list submission form-->
                     <a
                         class="nav__cta type-label-lg"
-                        href=""
+                        href="https://forms.gle/a9XM24Lp1jRpuApK8"
                         target="_blank"
                         >Submit Record</a
                     >
